@@ -8,13 +8,14 @@
 package org.opendaylight.openflowplugin.impl.util;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.common.types.rev130731.HelloElementType;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.protocol.rev130731.HelloInput;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.protocol.rev130731.HelloInputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.protocol.rev130731.hello.Elements;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.protocol.rev130731.hello.ElementsBuilder;
+import org.opendaylight.yangtools.yang.common.Uint32;
+import org.opendaylight.yangtools.yang.common.Uint8;
 
 public abstract class MessageFactory {
 
@@ -25,7 +26,7 @@ public abstract class MessageFactory {
      * @param helloXid     transaction id for hello message
      * @return HelloInput without elements
      */
-    public static HelloInput createHelloInput(short helloVersion, long helloXid) {
+    public static HelloInput createHelloInput(final Uint8 helloVersion, final Uint32 helloXid) {
         return createHelloInput(helloVersion, helloXid, null);
     }
 
@@ -37,7 +38,8 @@ public abstract class MessageFactory {
      * @param versionOrder list of openflow version in order
      * @return HelloInput with elements (version bitmap)
      */
-    public static HelloInput createHelloInput(short helloVersion, long helloXid, List<Short> versionOrder) {
+    public static HelloInput createHelloInput(final Uint8 helloVersion, final Uint32 helloXid,
+            final List<Uint8> versionOrder) {
         HelloInputBuilder helloInputbuilder = prepareHelloInputBuilder(helloVersion, helloXid);
         if (versionOrder != null) {
 
@@ -45,14 +47,14 @@ public abstract class MessageFactory {
             elementsBuilder.setType(HelloElementType.VERSIONBITMAP);
             int resultVersionListSize = 0;
             if (!versionOrder.isEmpty()) {
-                resultVersionListSize = versionOrder.get(0) + 1;
+                resultVersionListSize = versionOrder.get(0).toJava() + 1;
             }
             List<Boolean> booleanList = new ArrayList<>(resultVersionListSize);
 
             int versionOrderIndex = versionOrder.size() - 1;
 
             while (versionOrderIndex >= 0) {
-                short version = versionOrder.get(versionOrderIndex);
+                short version = versionOrder.get(versionOrderIndex).toJava();
                 if (version == booleanList.size()) {
                     booleanList.add(true);
                     versionOrderIndex--;
@@ -63,8 +65,7 @@ public abstract class MessageFactory {
 
             elementsBuilder.setVersionBitmap(booleanList);
 
-            List<Elements> elementList = Collections.singletonList(elementsBuilder.build());
-            helloInputbuilder.setElements(elementList);
+            helloInputbuilder.setElements(List.of(elementsBuilder.build()));
         }
         return helloInputbuilder.build();
     }
@@ -77,7 +78,7 @@ public abstract class MessageFactory {
      * @return builder with prepared header
      */
     private static HelloInputBuilder prepareHelloInputBuilder(
-            short highestVersion, long xid) {
+            final Uint8 highestVersion, final Uint32 xid) {
         HelloInputBuilder helloInputbuilder = new HelloInputBuilder();
         helloInputbuilder.setVersion(highestVersion);
         helloInputbuilder.setXid(xid);
@@ -90,7 +91,7 @@ public abstract class MessageFactory {
      * @param elements list of versions
      * @return version boolean list
      */
-    public static List<Boolean> digVersions(List<Elements> elements) {
+    public static List<Boolean> digVersions(final List<Elements> elements) {
         List<Boolean> result = null;
         if (elements != null && !elements.isEmpty()) {
             for (Elements elm : elements) {
